Make sure a recursive listing is done even if a first level listing returns no items.

BUG: 253054

svn path=/trunk/KDE/kdepimlibs/; revision=1188436