entitytreemodel.h
@@ -620,6 +620,7 @@ private:
     Q_PRIVATE_SLOT( d_func(), void fetchJobDone( KJob *job ) )
     Q_PRIVATE_SLOT( d_func(), void pasteJobDone( KJob *job ) )
     Q_PRIVATE_SLOT( d_func(), void updateJobDone( KJob *job ) )
+    Q_PRIVATE_SLOT( d_func(), void firstFetchJobDone( KJob *job ) )
 
     Q_PRIVATE_SLOT( d_func(), void itemsFetched( Akonadi::Item::List ) )
     Q_PRIVATE_SLOT( d_func(), void collectionsFetched( Akonadi::Collection::List ) )
